@@ -1,6 +1,9 @@
 0.1.8
 ------------------------------------------------------------------------
 Fix PPM color preview extraction.
+Updated to libraw 0.6.9:
+ - Better support for Samsung S85.
+ - Fixed possible integer overflow in wavelet denoising code.
 Updated to libraw 0.6.8:
  - Changes in QuickTake 100 files processing.
 Updated to libraw 0.6.7:
